made it so that the bgimage of buttonBomb is a bomb's png

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 .ButtonBomb{
-
+    background-image: url("src/bomb.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .ButtonInvisible{
 
