the classes being set correctly and everything works except the fetchRandInt which is still commented out

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-button {
-    .ButtonBomb {
-        color: transparent;
-        background-image: url("src/bomb.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
 
-    .ButtonInvisible {
+.ButtonBomb {
+    all: unset;
+    color: transparent;
+    background-image: url("src/bomb.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
-    }
+.ButtonInvisible {
+
 }
