defined classes for the proximalValues for buttons and added the textures for the respective values

--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,27 @@
 .ButtonInvisible {
     all: unset;
 }
+.mineProxmial1{
+
+}
+.mineProxmial2{
+
+}
+.mineProxmial3{
+
+}
+.mineProxmial4{
+
+}
+.mineProxmial5{
+
+}
+.mineProxmial6{
+
+}
+.mineProxmial7{
+
+}
+.mineProxmial8{
+
+}
