updated the CSS so that the proximal indicators are 30px x 30px and don't strech to fit

--- a/styles.css
+++ b/styles.css
@@ -11,67 +11,59 @@
 .ButtonInvisible {
     all: unset;
 }
-.mineProxmial1{
+.mineProximal1{
     all: unset;
     color: transparent;
     background-image: url("src/1.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial2{
+.mineProximal2{
     all: unset;
     color: transparent;
     background-image: url("src/2.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial3{
+.mineProximal3{
     all: unset;
     color: transparent;
     background-image: url("src/3.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial4{
+.mineProximal4{
     all: unset;
     color: transparent;
     background-image: url("src/4.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial5{
+.mineProximal5{
     all: unset;
     color: transparent;
     background-image: url("src/5.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial6{
+.mineProximal6{
     all: unset;
     color: transparent;
     background-image: url("src/6.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial7{
+.mineProximal7{
     all: unset;
     color: transparent;
     background-image: url("src/7.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.mineProxmial8{
+.mineProximal8{
     all: unset;
     color: transparent;
     background-image: url("src/8.png");
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
